--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <!-- Footer -->
     <footer>
       <div class="content">
-        <span class="copyright">© 2016  Fotomatic, All Rights Reserved</span>
+        <span class="copyright">© 2016  Fotomatic ©2017 Fistibal, All Rights Reserved</span>
         <span class="location">Designed in NYC</span>
       </div>
     </footer>
